--- a/launcher/ui/pages/global/LauncherPage.ui
+++ b/launcher/ui/pages/global/LauncherPage.ui
@@ -43,7 +43,7 @@
         <x>0</x>
         <y>0</y>
         <width>746</width>
-        <height>1202</height>
+        <height>1194</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_8">
@@ -64,47 +64,23 @@
            </widget>
           </item>
           <item>
-           <widget class="QGroupBox" name="instanceSortBox">
-            <property name="title">
-             <string/>
+           <widget class="QRadioButton" name="sortByNameBtn">
+            <property name="text">
+             <string>By &amp;name</string>
             </property>
-            <property name="flat">
-             <bool>true</bool>
+            <attribute name="buttonGroup">
+             <string notr="true">sortingModeGroup</string>
+            </attribute>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="sortLastLaunchedBtn">
+            <property name="text">
+             <string>&amp;By last launched</string>
             </property>
-            <layout class="QVBoxLayout" name="verticalLayout_3">
-             <property name="leftMargin">
-              <number>0</number>
-             </property>
-             <property name="topMargin">
-              <number>0</number>
-             </property>
-             <property name="rightMargin">
-              <number>0</number>
-             </property>
-             <property name="bottomMargin">
-              <number>0</number>
-             </property>
-             <item>
-              <widget class="QRadioButton" name="sortByNameBtn">
-               <property name="text">
-                <string>By &amp;name</string>
-               </property>
-               <attribute name="buttonGroup">
-                <string notr="true">sortingModeGroup</string>
-               </attribute>
-              </widget>
-             </item>
-             <item>
-              <widget class="QRadioButton" name="sortLastLaunchedBtn">
-               <property name="text">
-                <string>&amp;By last launched</string>
-               </property>
-               <attribute name="buttonGroup">
-                <string notr="true">sortingModeGroup</string>
-               </attribute>
-              </widget>
-             </item>
-            </layout>
+            <attribute name="buttonGroup">
+             <string notr="true">sortingModeGroup</string>
+            </attribute>
            </widget>
           </item>
           <item>
@@ -131,48 +107,33 @@
            </widget>
           </item>
           <item>
-           <widget class="QGroupBox" name="groupBox">
-            <property name="title">
-             <string/>
+           <widget class="QRadioButton" name="askToRenameDirBtn">
+            <property name="text">
+             <string>Ask what to do</string>
             </property>
-            <property name="flat">
-             <bool>true</bool>
+            <attribute name="buttonGroup">
+             <string notr="true">renamingBehaviorGroup</string>
+            </attribute>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="alwaysRenameDirBtn">
+            <property name="text">
+             <string>Always rename the folder</string>
             </property>
-            <layout class="QVBoxLayout" name="verticalLayout_5">
-             <property name="leftMargin">
-              <number>0</number>
-             </property>
-             <property name="topMargin">
-              <number>0</number>
-             </property>
-             <property name="rightMargin">
-              <number>0</number>
-             </property>
-             <property name="bottomMargin">
-              <number>0</number>
-             </property>
-             <item>
-              <widget class="QRadioButton" name="askToRenameDirBtn">
-               <property name="text">
-                <string>Ask what to do</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QRadioButton" name="alwaysRenameDirBtn">
-               <property name="text">
-                <string>Always rename the folder</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QRadioButton" name="neverRenameDirBtn">
-               <property name="text">
-                <string>Never rename the folder</string>
-               </property>
-              </widget>
-             </item>
-            </layout>
+            <attribute name="buttonGroup">
+             <string notr="true">renamingBehaviorGroup</string>
+            </attribute>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="neverRenameDirBtn">
+            <property name="text">
+             <string>Never rename the folder</string>
+            </property>
+            <attribute name="buttonGroup">
+             <string notr="true">renamingBehaviorGroup</string>
+            </attribute>
            </widget>
           </item>
           <item>
@@ -711,5 +672,6 @@
  <connections/>
  <buttongroups>
   <buttongroup name="sortingModeGroup"/>
+  <buttongroup name="renamingBehaviorGroup"/>
  </buttongroups>
 </ui>
